[package]
name = "lrp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A set of parsers for Rust lazy coders"
repository = "https://github.com/Defmc/lrp"
keyword = ["lr", "slr", "lalr", "parser"]
categories = ["accessibility", "compilers", "encoding", "parser-implementations"]

[dependencies]
prettytable-rs = "0.10.0"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
hermes_bench = "0.1.0"

[workspace]
members = ["wop"]
